Updates:chnaged text font to Inter, fixed overflow on landing page, removed AboutBlog section from landing page, changed the position of the CTA container on landing page

--- a/components/authorized/TalentComponents/TalentHero/style.module.scss
+++ b/components/authorized/TalentComponents/TalentHero/style.module.scss
@@ -88,7 +88,7 @@
                 }
 
                 .box__text{
-                    font-size: $font-fourteen;
+                    font-size: $font-sixteen;
                     font-weight: 400;
                     color: $black;
                     margin-top: .75rem;
