--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,5 @@
 @import "variables";
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "./index.scss";
 @import 'boxicons/css/boxicons.min.css';
 
@@ -108,9 +108,9 @@ input {
 
 .app {
     min-height: calc(100vh - 10rem);
-    width: 100vw;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 .main {
